--- a/css/home.css
+++ b/css/home.css
@@ -6,6 +6,10 @@
 	width: 100%;
 	min-width: 1280px;
 }
+body.noScroll{
+	overflow: hidden;
+	height: 100%;
+}
 #bg .bg{
 	width: 100%;
 	background-position: top center;
@@ -49,7 +53,7 @@
 #wrap .wSwiper .swp2 a{
 	width: 100%;
 	height: 100%;
-	background: rgba(0,0,0,0.08);
+	background: rgba(0,0,0,0.1);
     border-radius: 20px;
     transition: .3s;
 }
@@ -101,6 +105,17 @@
 	width: 205px;
     height: 130px;
 }
+#wrap .download a.android{
+	width: 205px;
+	height: 61px;
+	background: #000;
+}
+#wrap .download a.android img{
+	opacity: 0.8;
+}
+#wrap .download a.android img:hover{
+	opacity: 1;
+}
 #wrap .videoBtn{
 	position: absolute;
 	top: 425px;
@@ -114,4 +129,54 @@
 	position: absolute;
 	top:2px;
 	right: 2px;
+}
+/*视频出现时的透明暗色背景*/
+.video{
+	display: none;
+	position: fixed;
+	top:0;
+	left: 0;
+	z-index: 99;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,.3);
+}
+.video .video_box{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	width: 800px;
+	height: 450px;
+	border: 2px solid #b69476;
+}
+.video .close_btn img{
+	position: absolute;
+	top: 0px;
+	right: -40px;
+	width: 34px;
+	height: 34px;
+	cursor: pointer;
+	transform: rotate(0deg);
+	transition: .3s;
+}
+.video .close_btn img:hover{
+	transform: rotate(180deg);
+}
+/*鼠标*/
+.down_mouse{
+	position: absolute;
+	left: 50%;
+	margin-left: -15px;
+	bottom: 220px;
+	opacity: 1
+	width: 30px;
+	height: 70px;
+	animation: drop .8s linear infinite;
+}
+@keyframes drop{
+	from{bottom: 220px;opacity: 1}
+	to{bottom: 150px;opacity: 0}
 }
